# multimode_expts

./: .gitignore  CavityQubitEnv.py  MM_base.py  MM_dual_rail_base.py  MM_rb_base.py  MONITORING_GUIDE.md  NameServer.ipynb  QUICK_START_MONITORING.md  README.md  REFACTORING_GUIDE.md  _migrate_qec_notebooks.py  architecture_analysis.md  autocalib_helpers.py  chevron_error_amp_analysis.md  config_rfsoc_ziqian.yml  dataset.py  experiment_config.yml  fit_display.py  fit_display_classes.py  floquet_storage_2Derramp.csv  floquet_storage_swap_dataset.csv  floquet_storage_swap_dataset_copy.csv  hardware_config_202505.yml  kernel_launcher.py  kernel_launcher_local.py  launch_lab.py  man1_storage_swap_dataset.csv  man1_storage_swap_dataset_copy.csv  man1_storage_swap_dataset_test.csv  monitor_dashboard.py  package-lock.json  persistent_monitoring.py  pixi migration.md  pyproject.toml  pyrightconfig.json  qsim_exp_cfg.yml  qsim_experiments.ipynb  qsim_experiments.py  requirements.txt  ruff.toml  (+12 more)
.claude/: instructions.md  settings.local.json
analysis_notebooks/: M2counts.npy  ManyBodyDephasing_post_ramsey_analysis.ipynb  Qubit_RB.ipynb  RAM_target_spectator_analysis.ipynb  RAM_target_spectator_analysis_250114.ipynb  active_reset.ipynb  cavity_temperature_and_echo.ipynb  coupler1_z.npy  coupler_scan.ipynb  cross_kerr_scan.ipynb  error_budget.ipynb  error_budget_new.ipynb  expts_run_base.py  freq_m1.npy  man1_storage_swap_dataset.csv  p0_lists.npy  p0_lists2.npy  p1_lists.npy  p1_lists2.npy  parity_temp_analysis.ipynb  qsim analysis.ipynb  qsim_wigner_ids.yml  rbam_analysis.ipynb  (+2 more)
(+341 files in other folders)
