[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimode_expts"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "experiments*",
  "fitting*",
  "slab*",
  "job_server*",
]
exclude = [ ]

[tool.pixi.workspace]
name = "multimode_expts"
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"
tqdm = ">=4.67.1,<5"
lmfit = ">=1.3.4,<2"
h5py = ">=3.15.1,<4"
pyro4 = ">=4.82,<5"
tabulate = ">=0.9.0,<0.10"
yaml = ">=0.2.5,<0.3"
matplotlib = ">=3.10.8,<4"
ipykernel = ">=7.1.0,<8"
jupyterlab = ">=4.5.1,<5"
ipywidgets = ">=8.1.8,<9"
pandas = ">=2.3.3,<3"
qutip = ">=5.2.2,<6"
pip = ">=25.3,<26"
gymnasium = ">=1.2.2,<2"
pyvisa = ">=1.15.0,<2"
pyserial = ">=3.5,<4"
numpy = "<2.0"

[tool.pixi.pypi-dependencies]
qick = { path = "../qick", editable = true }
# slab = { path = "../slab", editable = true }
multimode_expts = { path = ".", editable = true }
fastapi = ">=0.115.0"
pydantic = ">=2.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}

[tool.ruff.format]
quote-style = "preserve" # don't enforce single or double quotes

# [tool.pyright]
# executionEnvironments = [
#   { root = ".", extraPaths = ["../"] }
# ]

